--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About Us</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="#About Us" class="nav-item nav-link">Doctors</a>
+                        <a href="#aboutus" class="nav-item nav-link">Doctors</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Doctors</a>
                             <div class="dropdown-menu bg-light m-0">
