--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About Us</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="#" class="nav-item nav-link">Doctors</a>
+                        <a href="#doctors" class="nav-item nav-link">Doctors</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Doctors</a>
                             <div class="dropdown-menu bg-light m-0">
@@ -235,7 +235,7 @@
     <!-- Features End -->
 
     <!-- Team Start -->
-    <div class="container-fluid container-team pb-5">
+    <div id="doctors" class="container-fluid container-team pb-5">
         <div class="container">
             <h1 class=" text-center text-primary display-6 mb-3">About Us</h1>
             <div class="row g-5 align-items-center mb-5">
