--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                         <a href="index.html" class="nav-item nav-link ">Home</a>
                         <a href="about.html" class="nav-item nav-link active">About Us</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="Doctors.html" class="nav-item nav-link">Doctors</a>
+                        <a href="#doctors" class="nav-item nav-link">Doctors</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Doctors</a>
                             <div class="dropdown-menu bg-light m-0">
