--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
                             <a class="btn btn-link" href="about.html">About Us</a>
                             <a class="btn btn-link" href="contact.html">Contact Us</a>
                             <a class="btn btn-link" href="service.html">Our Services</a>
-                            <a class="btn btn-link" href="">Doctors</a>
+                            <a class="btn btn-link" href="index.html#doctors">Doctors</a>
                         </div>
                         <div class="col-sm-9">
                             <h1 class="display-6 mb-3"><i class="fas fa-phone-alt"></i>  1800 1200 111</h1>  
