--- a/service.html
+++ b/service.html
@@ -332,7 +332,7 @@
                             <a class="btn btn-link" href="about.html">About Us</a>
                             <a class="btn btn-link" href="contact.html">Contact Us</a>
                             <a class="btn btn-link" href="service.html">Our Services</a>
-                            <a class="btn btn-link" href="">Doctors</a>
+                            <a class="btn btn-link" href="index.html#doctors">Doctors</a>
                            
                         </div>
                         <div class="col-sm-9">
