--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="container pb-5">
                             <div class="row justify-content-start">
                                 <div class="col-lg-5 text-start">
-                                    <h2 class="display-3 text-white animated slideInRight mb-3">We Make Eyes Smile. </h2>
+                                    <h2 class="display-3 text-white animated slideInRight mb-3">We Make your Eyes Smile. </h2>
                                     <!-- <p class="mb-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue, iaculis id elit eget, ultrices pulvinar tortor. Quisque vel lorem porttitor, malesuada arcu quis, fringilla risus.</p> -->
                                     <!-- <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a> -->
                                 </div>
