--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" height="800" src="img/Jothi Hospital's Image 1900x800 copy" alt="Image">
+                    <img class="w-100" height="800" src="img/" alt="Image">
                     <div class="carousel-caption">
                         <div class="container pb-5">
                             <div class="row justify-content-start">
                                 <div class="col-lg-5 text-start">
-                                    <h2 class="display-3 text-white animated slideInLeft mb-3">We Make your🤓Eyes Smile </h2>
+<!--                                     <h2 class="display-3 text-white animated slideInLeft mb-3">We Make your🤓Eyes Smile </h2> -->
                                     <!-- <p class="mb-5 animated slideInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue, iaculis id elit eget, ultrices pulvinar tortor. Quisque vel lorem porttitor, malesuada arcu quis, fringilla risus.</p> -->
                                     <!-- <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a> -->
                                 </div>
