--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" height="800" src="img/Slider-1.png" alt="Image">
+                    <img class="w-100" height="800" src="img/Home_Slider_Hospital.png" alt="Image">
                     <div class="carousel-caption">
                         <div class="container pb-5">
                             <div class="row justify-content-start">
